<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivTecidos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.40"
        android:background="@drawable/background_tecido"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textIdTecido"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:text="@string/txtIdTecido"
        android:textColor="#131212"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIdTecido"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textIdTecido"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleDetalhesTecido"
        android:layout_width="354dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/textDadosTecido"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivTecidos" />

    <TextView
        android:id="@+id/textTipoTecido"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtTipoTecido"
        android:textColor="#131212"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIdTecido" />

    <TextView
        android:id="@+id/textViewTipoTecido"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#131212"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textTipoTecido"
        app:layout_constraintTop_toBottomOf="@+id/textViewIdTecido" />

    <TextView
        android:id="@+id/textCorTecido"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtCorTecido"
        android:textColor="#131212"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTipoTecido" />

    <TextView
        android:id="@+id/textViewCorTecido"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#131212"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textCorTecido"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoTecido" />

    <TextView
        android:id="@+id/textMetragemTecido"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtMetragemTecido"
        android:textColor="#131212"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorTecido" />

    <TextView
        android:id="@+id/textViewMetragemTecido"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#131212"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/textMetragemTecido"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorTecido" />

    <TextView
        android:id="@+id/textValorTecido"
        android:layout_width="120dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/hintValorTecido"
        android:textColor="#131212"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMetragemTecido" />

    <TextView
        android:id="@+id/textViewValorTecido"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#131212"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textValorTecido"
        app:layout_constraintTop_toBottomOf="@+id/textViewMetragemTecido" />

    <Button
        android:id="@+id/btExcluirTecido"
        android:layout_width="147dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtExcluirTecido"
        app:layout_constraintEnd_toStartOf="@+id/btEditarTecido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorTecido" />

    <Button
        android:id="@+id/btEditarTecido"
        android:layout_width="147dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txtEditarTecido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorTecido" />

</androidx.constraintlayout.widget.ConstraintLayout>